# google-signin-unity

./: .gitignore  GoogleSignIn.asmdef  LICENSE  README.md  build.gradle  build_all.sh  package.json  settings.gradle
GoogleSignIn/: Future.cs  GoogleSignIn.cs  GoogleSignInConfiguration.cs  GoogleSignInStatusCode.cs  link.xml
GoogleSignIn/Editor/: GoogleSignInDependencies.xml  google-signin-plugin_v1.0.4.txt
GoogleSignIn/Impl/: BaseObject.cs  GoogleSignInImpl.cs  GoogleSignInImplEditor.cs  NativeFuture.cs  SignInHelperObject.cs
GoogleSignInPlugin/Assets/: package.json
GoogleSignInPlugin/Assets/GoogleSignIn/: Future.cs  GoogleSignIn.cs  GoogleSignInConfiguration.cs  GoogleSignInStatusCode.cs  GoogleSignInUser.cs
GoogleSignInPlugin/Assets/GoogleSignIn/Editor/: GoogleSignInDependencies.cs  GoogleSignInDependencies.xml  UnityEditorPostProcessor.cs  google-signin-plugin_v1.0.0.txt  google-signin-plugin_v1.0.1.txt
GoogleSignInPlugin/Assets/GoogleSignIn/Impl/: GoogleSignInImpl.cs  GoogleSignInImplEditor.cs  NativeFuture.cs
GoogleSignInPlugin/Assets/Parse/: LICENSE
GoogleSignInPlugin/Assets/Plugins/Android/src/main/java/com/google/googlesignin/: GoogleSignInFragment.java  GoogleSignInHelper.java  TokenResult.java
GoogleSignInPlugin/Assets/Plugins/iOS/: GoogleSignIn.mm
GoogleSignInPlugin/Assets/Plugins/iOS/GoogleSignIn/: GoogleSignIn.h  GoogleSignIn.mm  GoogleSignInAppController.h  GoogleSignInAppController.mm
GoogleSignInPlugin/Assets/SignInSample/: SigninSampleScript.cs
Plugins/Android/src/main/java/com/google/googlesignin/: GoogleSignInFragment.java  IListener.java  TokenPendingResult.java  TokenRequest.java
Plugins/iOS/: GoogleSignInAppController.h  GoogleSignInAppController.mm
Samples~/SignInSample/: MainScene.unity  SigninSampleScript.cs
gradle/wrapper/: gradle-wrapper.properties
native-googlesignin/: build.gradle
native-googlesignin/src/main/: AndroidManifest.xml
native-googlesignin/src/main/cpp/: future.h  google_signin.cc  google_signin.h  google_signin_bridge.cc  google_signin_bridge.h  google_signin_user.cc  google_signin_user_impl.h  jni.cc  jni_init.h
native-googlesignin/src/main/java/com/google/googlesignin/: GoogleSignInFragment.java  GoogleSignInHelper.java  TokenPendingResult.java  TokenRequest.java  TokenResult.java
staging/: DIR_README.md
staging/native/: GoogleSignInCpp.podspec  README.md  build.gradle
staging/native/gradle/wrapper/: gradle-wrapper.properties
staging/native/src/: CMakeLists.txt
staging/native/src/android/: AndroidManifest.xml  CMakeLists.txt  google_signin.cc  google_signin_bridge.h  google_signin_user.cc  google_signin_user_impl.h  jni.cc  jni_context.h
staging/native/src/android/java/com/google/googlesignin/: GoogleSignInFragment.java  GoogleSignInHelper.java  TokenPendingResult.java  TokenRequest.java  TokenResult.java
staging/native/src/include/: future.h  google_signin.h  google_signin_user.h
staging/native/src/ios/: GoogleSignIn.h  GoogleSignIn.mm
staging/native/testapp/: Podfile  build.gradle
staging/native/testapp/gradle/wrapper/: gradle-wrapper.properties
staging/native/testapp/src/: common_main.cpp  main.h
staging/native/testapp/src/android/: AndroidManifest.xml  CMakeLists.txt  android_main.cpp
staging/native/testapp/src/android/java/com/google/signin/testapp/: LoggingUtils.java  TextEntryField.java
staging/native/testapp/src/android/res/layout/: main.xml
staging/native/testapp/src/android/res/values/: strings.xml
staging/native/testapp/src/ios/: ios_main.mm
staging/native/testapp/testapp/: Info.plist
staging/native/testapp/testapp.xcodeproj/: project.pbxproj
staging/native/testapp/testapp.xcodeproj/xcshareddata/xcschemes/: testapp.xcscheme
